Fixes: fix member page (overflow + validator)

--- a/assets/home/home.css
+++ b/assets/home/home.css
@@ -66,7 +66,7 @@ html{
 	text-decoration: underline;
 }
 .carousel a.item h2::after{
-	content: "\00A0\25BA"; /* do not change to \25B6, it sucks on chrome android */
+	content: "\A0\25BA"; /* do not change to \25B6, it sucks on chrome android */
 }
 @media screen and (max-width: 720px){
 	.carousel .item h2{
