--- a/assets/membre/member.css
+++ b/assets/membre/member.css
@@ -14,6 +14,9 @@ body > main > header h1{
 	flex-wrap: nowrap;
 	justify-content: center;
 }
+#cards-container{
+	max-width: 100%;
+}
 .card{
 	margin: 25px;
 	padding: 10px;
@@ -58,13 +61,13 @@ body > main > header h1{
 	font-size: 1.3rem;
 	margin: 5px;
 }
-.card main p{
+.card p{
 	margin: 10px;
 	text-align: justify;
 }
 .transfer fieldset{
 	background-color: #ede8ec;
-	padding: 15px;
+	padding: 7px;
 	width: max-content;
 	max-width: 100%;
 	overflow: visible;
@@ -81,9 +84,11 @@ fieldset legend{
 	border: solid 1px #000;
 	border-radius: 5px;
 }
-.transfer label{
-	display: block;
-	margin: 5px;
+.transfer .label{
+	letter-spacing: -1px;
+}
+.transfer .label::after{
+	content: "\A0:";
 }
 .transfer table td:first-of-type{
 	text-align: right;
@@ -95,8 +100,7 @@ fieldset legend{
 }
 .transfer .value{
 	display: block;
-	min-width: max-content;
-	width: 100%;
+	max-width: 100%;
 }
 .transfer textarea{
 	width: 100%;
